{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 484,
  "lineage": "afc37313-b29c-8a46-04e6-863e04972bb3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "existing_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:internet-gateway/igw-01b982db1aea1547c",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0ebf59b186a59f2bc"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0ebf59b186a59f2bc"
                ]
              }
            ],
            "id": "igw-01b982db1aea1547c",
            "internet_gateway_id": "igw-01b982db1aea1547c",
            "owner_id": "597088035840",
            "tags": {
              "Name": "eksctl-interstellar-cluster-cluster/InternetGateway",
              "alpha.eksctl.io/cluster-name": "interstellar-cluster",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.202.0-dev+5c8b046f6.2025-01-23T05:04:18Z",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "interstellar-cluster"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:vpc/vpc-0ebf59b186a59f2bc",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f7cdf9a9f25c04f7",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05b3c2b53979c41ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebf59b186a59f2bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd5068eb767d041b",
            "owner_id": "597088035840",
            "tags": {
              "Name": "eksctl-interstellar-cluster-cluster/VPC",
              "alpha.eksctl.io/cluster-name": "interstellar-cluster",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.202.0-dev+5c8b046f6.2025-01-23T05:04:18Z",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "interstellar-cluster"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "interstellar_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "interstellar_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597088035840:loadbalancer/app/interstellar-alb/ceaaafd196066892",
            "arn_suffix": "app/interstellar-alb/ceaaafd196066892",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "interstellar-alb-575426487.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:597088035840:loadbalancer/app/interstellar-alb/ceaaafd196066892",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "interstellar-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a6fa3f01fa5e9ad0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e7dc0bf11f2bc06"
              },
              {
                "subnet_id": "subnet-08595d9184fb831c5"
              }
            ],
            "subnets": [
              "subnet-05e7dc0bf11f2bc06",
              "subnet-08595d9184fb831c5"
            ],
            "vpc_id": "vpc-0ebf59b186a59f2bc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597088035840:listener/app/interstellar-alb/ceaaafd196066892/750c24eb7f57d97c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:597088035840:targetgroup/interstellar-tg/9c5e0e1531d40168",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:597088035840:targetgroup/interstellar-tg/9c5e0e1531d40168",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:597088035840:listener/app/interstellar-alb/ceaaafd196066892/750c24eb7f57d97c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:597088035840:loadbalancer/app/interstellar-alb/ceaaafd196066892",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "interstellar_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597088035840:targetgroup/interstellar-tg/9c5e0e1531d40168",
            "arn_suffix": "targetgroup/interstellar-tg/9c5e0e1531d40168",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:597088035840:targetgroup/interstellar-tg/9c5e0e1531d40168",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:597088035840:loadbalancer/app/interstellar-alb/ceaaafd196066892"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "interstellar-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ebf59b186a59f2bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:route-table/rtb-0fee2f4142fb090c9",
            "id": "rtb-0fee2f4142fb090c9",
            "owner_id": "597088035840",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf59b186a59f2bc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfdbeb2fa7fe1a9f",
            "route_table_id": "rtb-0f0ae743e6f2b71da",
            "subnet_id": "subnet-0d1bb40d191099ee8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "existing_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:subnet/subnet-05e7dc0bf11f2bc06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.130.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e7dc0bf11f2bc06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088035840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RDS-Pvt-subnet-5"
            },
            "tags_all": {
              "Name": "RDS-Pvt-subnet-5"
            },
            "vpc_id": "vpc-0ebf59b186a59f2bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "existing_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:subnet/subnet-08595d9184fb831c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08595d9184fb831c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597088035840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksctl-interstellar-cluster-cluster/SubnetPublicUSEAST1D",
              "alpha.eksctl.io/cluster-name": "interstellar-cluster",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.202.0-dev+5c8b046f6.2025-01-23T05:04:18Z",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "interstellar-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eksctl-interstellar-cluster-cluster/SubnetPublicUSEAST1D",
              "alpha.eksctl.io/cluster-name": "interstellar-cluster",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.202.0-dev+5c8b046f6.2025-01-23T05:04:18Z",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "interstellar-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ebf59b186a59f2bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:subnet/subnet-0bcc875c448da3c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.128.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcc875c448da3c52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088035840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RDS-Pvt-subnet-1"
            },
            "tags_all": {
              "Name": "RDS-Pvt-subnet-1"
            },
            "vpc_id": "vpc-0ebf59b186a59f2bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088035840:vpc-endpoint/vpce-0e9e7d20ba1638fa0",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0e9e7d20ba1638fa0",
            "owner_id": "597088035840",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ebf59b186a59f2bc"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}